# conann

./: .env.example  .gitignore  README.md  RELEASE_ARTIFACTS.md  pyproject.toml  setup.py
docs/: README.md  api.html  index.html  styles.css
examples/: 01_simple_flat_search.py  02_ivf_baseline.py  03_full_conann_workflow.py  04_pytorch_embeddings.py  05_sklearn_text_search.py  06_io_and_metadata.py  README.md
manylinux/: Containerfile
scripts/: build_all_pythons.sh  build_all_pythons_windows.ps1  build_local_wheel.sh  build_manylinux_inside.sh  build_manylinux_wheels.sh  build_one_python.sh  build_one_python_windows.ps1  smoke_conann_wheel.py  verify_wheels.sh  verify_wheels_windows.ps1
tests/: test_import.py  test_synthetic_conann.py
tools/: rebuild_windows_wheels_from_existing.py  repair_wheel_metadata.py  stage_conann_package.py
